Fix listQuantityAdd Complate
